<resources>
    <string name="app_name">עטל"ף ניטור</string>
    <string name="register_fragment_title">רישום</string>
    <string name="id">ת.ז</string>
    <string name="haiti_id">מזהה האיטי</string>
    <string name="doctor">מטפל</string>
    <string name="department">מחלקה</string>
    <string name="room">חדר</string>
    <string name="bed">מיטה</string>
    <string name="civilian">אזרח</string>
    <string name="breathed">מונשם</string>
    <string name="release_reason">סיבת שחרור</string>
    <string name="register_button_text">הוסף</string>
    <string name="login_button_text">התחבר כמטופל קיים</string>
    <string name="mandatory_field_text">חובה *</string>
    <string name="temperature">חום</string>
    <string name="diastolic">דיאסטולי</string>
    <string name="systolic">סיסטולי</string>
    <string name="password">סיסמה</string>
    <string name="send_manual_measurements_button_text">שלח</string>
    <string name="set_sensor_button_text">בחירת חיישן</string>
    <string name="sensor_address_hint_text">מזהה</string>
    <string name="sensor_address_placeholder">FF:FF:FF:FF:FF:FF</string>
    <string name="save">שמור</string>
    <string name="sensor_address_save_button_text">@string/save</string>
    <string name="sensor_address_choose_title">בחירת חיישן</string>
    <string name="sensor_address_choose_description">ניתן להקליד את כתובת החיישן או לסרוק את תג החיישן</string>
    <string name="release_reasons_hint">@string/release_reason</string>
    <string name="release_password_hint">@string/password</string>
    <string name="release_dialog_positive_button_text">שחרר</string>
    <string name="release_dialog_negative_button_text">בטל</string>
    <string name="no_release_reason_alert_message">לא הוזנה סיבת שחרור</string>
    <string name="wrong_release_password_message">סיסמה שגויה</string>
    <string name="sign_in_fragment_title">התחברות</string>
    <string name="sign_in_button_text">התחבר</string>
    <string name="check_patient_exist_success_message">המטופל כבר קיים</string>check_patient_exist_fail_message
    <string name="check_patient_exist_fail_message">וידוא קיום מטופל זהה במערכת נכשל</string>
    <string name="register_patient_fail_message">רישום מטופל נכשל</string>
    <string name="register_patient_success_message">מטופל נרשם בהצלחה</string>
    <string name="sign_in_patient_fail_message">לא ניתן להתחבר למטופל זה</string>
    <string name="sign_in_patient_success_message">מטופל התחבר בהצלחה</string>
    <string name="submit_sensor_to_patient_fail_message">חיישן לא נשמר עבור המטופל, אנא נסה שוב.</string>
    <string name="submit_sensor_to_patient_success_message">חיישן נשמר בהצלחה</string>
    <string name="body_temperature_fail_message">הזנת חום נכשלה, אנא נסה שוב.</string>
    <string name="body_temperature_success_message">חום הוזן בהצלחה</string>
    <string name="blood_pressure_fail_message">הזנת לחץ דם נכשלה, אנא נסה שוב.</string>
    <string name="blood_pressure_success_message">לחץ דם הוזן בהצלחה</string>
    <string name="body_temperature_illegal_input_message">החום שהוזן אינו תקין</string>
    <string name="blood_pressure_illegal_input_message">לחץ הדם שהוזן אינו תקין</string>
    <string name="manual_measurements_fail_message">הזנת מדדים ידניים נכשלה, אנא נסה שוב</string>
    <string name="release_patient_fail_message">שחרור מטופל נכשל, אנא צור קשה עם החמל ונסה שוב</string>
    <string name="manual_measurements_success_message">מדדים ידניים הוזנו בהצלחה</string>
    <string name="register_invalid_input_message">חלק מהשדות שהוזנו אינם תקינים</string>
    <string name="sign_in_invalid_input_message">תעודת הזהות שהוזנה אינה תקינה</string>
    <string name="get_beds_working_message">מסנכרן מיטות\n אנא חכה סבלנות</string>
    <string name="get_beds_failure_message">סנכרון מיטות נכשל\n צא מהחלון ולאחר מכן נסה שוב</string>
    <string name="sensor_address_invalid_input_message">הכתובת שהוזנה אינה תקינה, אנא שים לב לפורמט FF:FF:FF:FF:FF:FF</string>
</resources>
