<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.a101_monitoring.ui.RegisterPatientFragment">

    <TextView
        android:id="@+id/register_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/register_fragment_title"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/patient_id_container"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        app:helperText="@string/mandatory_field_text"
        app:helperTextTextColor="@android:color/holo_red_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_title"
        app:layout_constraintEnd_toStartOf="@id/department_container"
        android:layout_margin="10dp"
        android:hint="@string/id"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registered_patient_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/patient_haiti_container"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:hint="@string/haiti_id"
        app:helperText="@string/mandatory_field_text"
        app:helperTextTextColor="@android:color/holo_red_dark"
        app:layout_constraintTop_toBottomOf="@id/patient_id_container"
        app:layout_constraintStart_toStartOf="@id/patient_id_container"
        app:layout_constraintEnd_toEndOf="@id/patient_id_container"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/patient_haiti"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/patient_doctor_container"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:hint="@string/doctor"
        app:helperText="@string/mandatory_field_text"
        app:helperTextTextColor="@android:color/holo_red_dark"
        app:layout_constraintTop_toBottomOf="@id/patient_haiti_container"
        app:layout_constraintStart_toStartOf="@id/patient_id_container"
        app:layout_constraintEnd_toEndOf="@id/patient_id_container"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/doctor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/department_container"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:hint="@string/department"
        app:helperText="@string/mandatory_field_text"
        app:helperTextTextColor="@android:color/holo_red_dark"
        app:layout_constraintTop_toTopOf="@id/patient_id_container"
        app:layout_constraintStart_toEndOf="@id/patient_id_container"
        app:layout_constraintEnd_toStartOf="@id/is_civilian_switch"
        android:layout_marginStart="16dp"
        >

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:inputType="none"
            android:editable="false"
            android:id="@+id/department_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

<!--        <androidx.appcompat.widget.AppCompatSpinner-->
<!--            android:id="@+id/department_spinner"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content" />-->

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/room_container"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:hint="@string/room"
        app:helperText="@string/mandatory_field_text"
        app:helperTextTextColor="@android:color/holo_red_dark"
        app:layout_constraintTop_toTopOf="@id/patient_haiti_container"
        app:layout_constraintStart_toStartOf="@id/department_container"
        app:layout_constraintEnd_toEndOf="@id/department_container"
        >

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:inputType="none"
            android:editable="false"
            android:id="@+id/room_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/bed_container"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:hint="@string/bed"
        app:helperText="@string/mandatory_field_text"
        app:helperTextTextColor="@android:color/holo_red_dark"
        app:layout_constraintTop_toTopOf="@id/patient_doctor_container"
        app:layout_constraintStart_toStartOf="@id/department_container"
        app:layout_constraintEnd_toEndOf="@id/department_container"
        >

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:inputType="none"
            android:editable="false"
            android:id="@+id/bed_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/is_civilian_switch"
        android:layout_height="wrap_content"
        android:layout_width="100dp"
        app:useMaterialThemeColors="true"
        app:layout_constraintStart_toEndOf="@id/department_container"
        app:layout_constraintTop_toTopOf="@id/department_container"
        app:layout_constraintBottom_toBottomOf="@id/department_container"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:text="@string/civilian"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/is_breathed_switch"
        android:layout_height="wrap_content"
        android:layout_width="100dp"
        app:useMaterialThemeColors="true"
        app:layout_constraintStart_toStartOf="@id/is_civilian_switch"
        app:layout_constraintTop_toTopOf="@id/room_container"
        app:layout_constraintBottom_toBottomOf="@id/room_container"
        app:layout_constraintEnd_toEndOf="@id/is_civilian_switch"
        android:text="@string/breathed"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/register_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/patient_doctor_container"
        app:layout_constraintStart_toStartOf="@id/login_button"
        app:layout_constraintEnd_toEndOf="@id/login_button"
        android:text="@string/register_button_text"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/register_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/login_button_text"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
