<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.SensorChooseFragment">


    <TextView
        android:id="@+id/choose_sensor_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/sensor_address_container"
        android:textSize="20sp"
        android:text="@string/sensor_address_choose_description"
        android:gravity="center"
        />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sensor_address_container"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/sensor_address_hint_text"
        app:placeholderText="@string/sensor_address_placeholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose_sensor_description"
        app:layout_constraintBottom_toTopOf="@id/sensor_address_save_button"
        app:counterEnabled="true"
        app:counterMaxLength="17"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sensor_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapCharacters" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sensor_address_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/sensor_address_container"
        app:layout_constraintStart_toStartOf="@id/sensor_address_container"
        app:layout_constraintEnd_toEndOf="@id/sensor_address_container"
        app:layout_constraintBottom_toBottomOf="@id/choose_sensor_progress_bar"
        android:text="@string/sensor_address_save_button_text"
        />

    <include
        android:id="@+id/choose_sensor_progress_bar"
        layout="@layout/default_circled_progress_bar"
        android:visibility="invisible"
        tools:visibility="visible"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/sensor_address_save_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/sensor_address_save_button"
        app:layout_constraintEnd_toEndOf="@id/sensor_address_save_button"
        />

</androidx.constraintlayout.widget.ConstraintLayout>