<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.PatientManualMeasurmentsFragment">

    <TextView
        android:id="@+id/patient_manual_measurments_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        tools:text="313599466"
        android:textSize="50sp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/patient_manual_temperature_container"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/temperature"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/patient_manual_measurments_title"
        app:layout_constraintBottom_toTopOf="@id/systolic_diastolic_divider"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/patient_manual_temperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/patient_manual_systolic_container"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/systolic"
        app:layout_constraintEnd_toStartOf="@id/systolic_diastolic_divider"
        app:layout_constraintTop_toTopOf="@id/systolic_diastolic_divider"
        app:layout_constraintBottom_toBottomOf="@id/systolic_diastolic_divider"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/patient_manual_systolic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/systolic_diastolic_divider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="/"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/patient_manual_temperature_container"
        app:layout_constraintBottom_toTopOf="@id/send_manual_measurments_button"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/patient_manual_diastolic_container"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/diastolic"
        app:layout_constraintStart_toEndOf="@id/systolic_diastolic_divider"
        app:layout_constraintTop_toTopOf="@id/systolic_diastolic_divider"
        app:layout_constraintBottom_toBottomOf="@id/systolic_diastolic_divider"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/patient_manual_diastolic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/send_manual_measurments_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/systolic_diastolic_divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/send_manual_measurements_button_text"
        />

</androidx.constraintlayout.widget.ConstraintLayout>